--- a/OutOfRed/app/src/main/AndroidManifest.xml
+++ b/OutOfRed/app/src/main/AndroidManifest.xml
@@ -11,12 +11,13 @@
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity android:name=".LoginActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"
-                    />
+                <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"/>
+        <activity android:name=".MainActivity" />
+        <activity android:name=".SuccessActivity"></activity>
     </application>
 
 </manifest>
