--- a/OutOfRed/app/src/main/AndroidManifest.xml
+++ b/OutOfRed/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="outofred.com.br.outofred">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/deal_icon_white"
